# image_automation_tool

./: README.md  pyproject.toml
src/image_automation/: __init__.py
src/image_automation/cli/: __init__.py  main.py
src/image_automation/core/: config.py  exceptions.py  models.py  output_manager.py  progress.py  report.py  scanner.py
src/image_automation/gui/: __init__.py  app.py
src/image_automation/processing/: __init__.py  antidedup.py  ensure_main_image.py  image_loader.py  pipeline.py  styling.py  validation.py  worker.py
src/image_automation/utils/: colors.py  logging.py
tests/: test_antidedup.py  test_pipeline_styling_output.py  test_placeholder.py  test_scanner_and_loader.py
